--- a/Kernel/arch/arm/configs/victory_8G_defconfig
+++ b/Kernel/arch/arm/configs/victory_8G_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7
-# Tue Dec 23 20:23:50 2011
+# Fri Dec 23 20:53:11 2011
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -39,7 +39,7 @@ CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
@@ -65,7 +65,8 @@ CONFIG_TREE_RCU=y
 CONFIG_RCU_FANOUT=32
 # CONFIG_RCU_FANOUT_EXACT is not set
 # CONFIG_TREE_RCU_TRACE is not set
-# CONFIG_IKCONFIG is not set
+CONFIG_IKCONFIG=m
+CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=20
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_DEBUG=y
@@ -1065,15 +1066,13 @@ CONFIG_IFB=y
 CONFIG_NETDEV_1000=y
 CONFIG_NETDEV_10000=y
 CONFIG_WLAN=y
+CONFIG_WIMAX_VICTORY=m
+CONFIG_WIMAX_GPIO_VICTORY=m
+CONFIG_BROADCOM_WIFI=m
 CONFIG_BROADCOM_WIFI_VICTORY=y
 # CONFIG_BROADCOM_WIFI_ATLAS is not set
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 CONFIG_WLAN_SAMSUNG_MEMSIZE_BCM=256
-CONFIG_WIMAX_VICTORY=m
-CONFIG_WIMAX_GPIO_VICTORY=m
-CONFIG_BROADCOM_WIFI=m
-CONFIG_BCM4329_FW_PATH="/etc/wifi/bcm4329_sta.bin"
-CONFIG_BCM4329_NVRAM_PATH="/etc/wifi/nvram_net.txt"
 # CONFIG_HOSTAP is not set
 
 #
@@ -1607,11 +1606,6 @@ CONFIG_SND_S5P_WM8994=y
 CONFIG_SND_S5P_WM8994_MASTER=y
 # CONFIG_S5P_INTERNAL_DMA is not set
 CONFIG_ANDROID_BUF_NUM=1
-CONFIG_SND_VOODOO=y
-CONFIG_SND_VOODOO_HP_LEVEL_CONTROL=y
-CONFIG_SND_VOODOO_HP_LEVEL=47
-CONFIG_SND_VOODOO_RECORD_PRESETS=y
-# CONFIG_SND_VOODOO_DEVELOPMENT is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_WM_HUBS=y
@@ -1889,16 +1883,9 @@ CONFIG_ONEDRAM_TX_RETRY=10
 #
 # File systems
 #
-CONFIG_EXT2_FS=y
-# CONFIG_EXT2_FS_XATTR is not set
-# CONFIG_EXT2_FS_XIP is not set
+# CONFIG_EXT2_FS is not set
 # CONFIG_EXT3_FS is not set
-CONFIG_EXT4_FS=y
-CONFIG_EXT4_USE_FOR_EXT23=y
-# CONFIG_EXT4_FS_XATTR is not set
-# CONFIG_EXT4_DEBUG is not set
-CONFIG_JBD2=y
-# CONFIG_JBD2_DEBUG is not set
+# CONFIG_EXT4_FS is not set
 # CONFIG_REISERFS_FS is not set
 # CONFIG_JFS_FS is not set
 CONFIG_FS_POSIX_ACL=y
