--- a/Kernel/arch/arm/configs/victory_8G_defconfig
+++ b/Kernel/arch/arm/configs/victory_8G_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7
-# Mon Dec 26 02:45:06 2011
+# Tue Dec 27 20:53:04 2011
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -1528,6 +1528,8 @@ CONFIG_FB_S3C_NR_BUFFERS=2
 # CONFIG_FB_S3C_LTE480WV is not set
 # CONFIG_FB_S3C_HT101HD1 is not set
 CONFIG_FB_S3C_TL2796=y
+CONFIG_FB_VOODOO=y
+# CONFIG_FB_VOODOO_DEBUG_LOG is not set
 # CONFIG_FB_S3C_S6D16A0X is not set
 # CONFIG_FB_S3C_NT35580 is not set
 # CONFIG_FB_S3C_LVDS is not set
