--- a/Kernel/arch/arm/configs/victory_8G_defconfig
+++ b/Kernel/arch/arm/configs/victory_8G_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.14
-# Sun Jan  1 20:35:09 2012
+# Sun Jan  1 22:25:44 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -1012,6 +1012,7 @@ CONFIG_USB_SWITCH_FSA9480=y
 # CONFIG_SAMSUNG_MODEMCTL is not set
 CONFIG_PN544=y
 # CONFIG_LEVEL is not set
+CONFIG_CUSTOM_VOLTAGE=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
