--- a/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7
-# Mon Jan  9 22:16:42 2012
+# Tue Jan 10 00:37:28 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -1625,6 +1625,11 @@ CONFIG_SND_SOC_WM_HUBS=y
 CONFIG_SND_SOC_WM8994=y
 # CONFIG_SND_SOC_WM8994_ATLAS is not set
 CONFIG_SND_SOC_WM8994_VICTORY=y
+CONFIG_SND_VOODOO=y
+CONFIG_SND_VOODOO_HP_LEVEL_CONTROL=y
+CONFIG_SND_VOODOO_HP_LEVEL=47
+CONFIG_SND_VOODOO_RECORD_PRESETS=y
+# CONFIG_SND_VOODOO_DEVELOPMENT is not set
 # CONFIG_SOUND_PRIME is not set
 # CONFIG_SND_S5P_RP is not set
 # CONFIG_HID_SUPPORT is not set
